# MemEmage

./: CMakeLists.txt  Cargo.toml  LICENSE  QUICKSTART.md  README.md  TECHNICAL.md  app.js  auth.rs  build.sh  database.rs  docker-compose.yml  example.cpp  handlers.rs  image_ffi.rs  index.html  lib.rs  main.rs  meme_processor.cpp  meme_processor.hpp  models.rs  schema.sql  styles.css
