[package]
name = "mememage-backend"
version = "1.0.0"
edition = "2021"
authors = ["MemEmage Team"]
description = "Backend API server for MemEmage meme generator"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Image handling
image = "0.24"
base64 = "0.21"

# FFI with C++
libc = "0.2"

# Logging
env_logger = "0.11"
log = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

[lib]
name = "mememage_backend"
path = "src/lib.rs"

[[bin]]
name = "mememage-server"
path = "src/main.rs"
